# o2cas-adapter

./: .gitmodules  Cargo.toml  Dockerfile  README.md
.cargo/: config.toml
config/: config.toml
kubernetes/: dify-o2cas-adapter.yaml
src/: config.rs  error.rs  main.rs  oauth2_handler.rs
