[package]
name = "o2a-adapter"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }  # 异步运行时
serde = { version = "1.0", features = ["derive"] }  # 序列化
serde_json = "1.0"  # JSON处理
jsonwebtoken = "8.0"  # JWT生成/验证
reqwest = { version = "0.11", features = ["json"] }  # HTTP客户端
url = "2.0"  # URL处理
thiserror = "1.0"  # 错误处理
log = "0.4"  # 日志
tracing = "0.1"  # 结构化日志
tracing-subscriber = { version = "0.3", features = ["env-filter"] }  # 日志订阅与过滤
config = "0.13"  # 配置管理
axum = "0.8.4"
http = "1.3.1"
chrono = "0.4.41"
roxmltree = "0.20.0"
toml = "0.9.4"
urlencoding = "2.1.3"
base64 = "0.21"  # Base64编解码
dotenv = "0.15"  # 环境变量管理
mockito = "1.0"  # HTTP mock测试
